force-app/main/default/objects/Province_Interest_Rate__c/Province_Interest_Rate__c.object-meta.xml
<CustomObject>
    <label>Province Interest Rate</label>
    <nameField>
        <displayFormat>PIR-{0000}</displayFormat>
        <label>Province Interest Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Province Interest Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>