force-app/main/default/objects/Province_Interest_Rate__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Interest Rate applicable End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Interest Rate applicable End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>