force-app/main/default/objects/Province_Interest_Rate__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Interest Rate</description>
    <inlineHelpText>Interest Rate</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>