force-app/main/default/objects/Province_Interest_Rate__c/fields/Province_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Province_Acronym__c</fullName>
    <description>Province Acronym</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Province Acronym</inlineHelpText>
    <label>Province Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>