force-app/main/default/objects/Province_Interest_Rate__c/fields/Province_Name__c.field-meta.xml
<CustomField>
    <fullName>Province_Name__c</fullName>
    <description>Province Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Province Name</inlineHelpText>
    <label>Province Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>