force-app/main/default/objects/Province_Interest_Rate__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Interest Rate applicable Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Interest Rate applicable Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>